:technologist: Formatea el código en los templates

--- a/apps/templates/base_partials/base_login.html
+++ b/apps/templates/base_partials/base_login.html
@@ -2,70 +2,72 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, user-scalable=no">
-  <link rel="stylesheet" href="{% static 'vendor/fontawesome-free/css/all.min.css' %}">
-  <link rel="stylesheet" href="{% static 'css/sb-admin-2.min.css' %}">
-  <link rel="stylesheet" href="{% static 'css/main.css' %}">
-  <link rel="icon" type="image/png" href="{% static 'img/favicon.png' %}"/>
-  <link rel="stylesheet" href="{% static 'vendor/sweetalert2/sweetalert2.min.css' %}">
-  <link rel="stylesheet" href="{% static 'vendor/select2/css/select2.min.css' %}">
-  <link rel="stylesheet" href="{% static 'vendor/select2/css/select2-bootstrap.min.css' %}">
-  {% block css %}{% endblock css %}
-  <title>UNASAM - Legajos</title>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, user-scalable=no">
+    <link rel="stylesheet" href="{% static 'vendor/fontawesome-free/css/all.min.css' %}">
+    <link rel="stylesheet" href="{% static 'css/sb-admin-2.min.css' %}">
+    <link rel="stylesheet" href="{% static 'css/main.css' %}">
+    <link rel="icon" type="image/png" href="{% static 'img/favicon.png' %}"/>
+    <link rel="stylesheet" href="{% static 'vendor/sweetalert2/sweetalert2.min.css' %}">
+    <link rel="stylesheet" href="{% static 'vendor/select2/css/select2.min.css' %}">
+    <link rel="stylesheet" href="{% static 'vendor/select2/css/select2-bootstrap.min.css' %}">
+    {% block css %}{% endblock css %}
+    <title>UNASAM - Legajos</title>
 </head>
 <body class="bodyLogin">
-  <header>
+<header>
     <div class="navbar nav-default box-shadow">
         <div class="container d-flex justify-content-between">
             <a href="#" class="navbar-brand d-flex align-items-center">
                 <img class="logo-licenciado" src="{% static 'img/logo-unasam.png' %}" alt="unasam-licenciado">
-                <span class="covid-19" style="font-size:60%;">SISTEMA DE LEGAJO DE PERSONAL DOCENTE Y ADMINISTRATIVO</span>
+                <span class="covid-19"
+                      style="font-size:60%;">SISTEMA DE LEGAJO DE PERSONAL DOCENTE Y ADMINISTRATIVO</span>
             </a>
         </div>
     </div>
-  </header>
-  <div class="container-login">
+</header>
+<div class="container-login">
 
     <div class="container">
 
-      <div class="row justify-content-center">
+        <div class="row justify-content-center">
 
-        <div class="col-xl-10 col-lg-12 col-md-9 mt-5">
+            <div class="col-xl-10 col-lg-12 col-md-9 mt-5">
 
-          <div class="card o-hidden border-0 shadow-lg my-5">
-            <div class="card-body p-0">
-              <div class="row">
-                <div class="col-lg-6 d-none border-right d-flex justify-content-center align-items-center">
-                  <img class="logo-login-unasam" src="{% static 'img/logo-unasam-licenciado.png' %}" />
-                </div>
-                <div class="col-lg-6">
-                  <div class="p-5">
-                    <div class="text-center">
-                      <h1 class="h4 text-gray-900 mb-4" style="font-size:90%;">SISTEMA DE LEGAJO DE PERSONAL DOCENTE Y ADMINISTRATIVO</h1>
+                <div class="card o-hidden border-0 shadow-lg my-5">
+                    <div class="card-body p-0">
+                        <div class="row">
+                            <div class="col-lg-6 d-none border-right d-flex justify-content-center align-items-center">
+                                <img class="logo-login-unasam" src="{% static 'img/logo-unasam-licenciado.png' %}"/>
+                            </div>
+                            <div class="col-lg-6">
+                                <div class="p-5">
+                                    <div class="text-center">
+                                        <h1 class="h4 text-gray-900 mb-4" style="font-size:90%;">SISTEMA DE LEGAJO DE
+                                            PERSONAL DOCENTE Y ADMINISTRATIVO</h1>
+                                    </div>
+                                    {% block container %}{% endblock %}
+                                </div>
+                            </div>
+                        </div>
                     </div>
-                    {% block container %}{% endblock %}
-                  </div>
                 </div>
-              </div>
+
             </div>
-          </div>
 
         </div>
 
-      </div>
-
     </div>
 
-  </div>
+</div>
 
-  <script src="{% static 'vendor/jquery/js/jquery-3.2.1.min.js' %}"></script>
-  <script src="{% static 'vendor/bootstrap/js/bootstrap.min.js' %}"></script>
-  <script src="{% static 'vendor/sweetalert2/sweetalert2.min.js' %}"></script>
-  <script src="{% static 'vendor/select2/js/select2.full.min.js' %}"></script>
-  <script src="{% static 'vendor/select2/js/i18n/es.js' %}"></script>
-  {% block javascript %}
-  {% endblock javascript %}
+<script src="{% static 'vendor/jquery/js/jquery-3.2.1.min.js' %}"></script>
+<script src="{% static 'vendor/bootstrap/js/bootstrap.min.js' %}"></script>
+<script src="{% static 'vendor/sweetalert2/sweetalert2.min.js' %}"></script>
+<script src="{% static 'vendor/select2/js/select2.full.min.js' %}"></script>
+<script src="{% static 'vendor/select2/js/i18n/es.js' %}"></script>
+{% block javascript %}
+{% endblock javascript %}
 </body>
 </html>
