--- a/apps/templates/experiencia/partials/_modal_laboral.html
+++ b/apps/templates/experiencia/partials/_modal_laboral.html
@@ -1,53 +1,55 @@
 {% load form_tags %}
 <div class="modal fade" id="modal-laboral">
-  <div class="modal-dialog modal-xl2">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title">Nueva Experiencia Laboral</h5>
-        <button type="button" class="btn btn-danger btn-md pull-right" style="margin-top:-30px;"
-                id="btnCerrarHeaderModallaboral">x
-        </button>
-      </div>
-      <form id="formLaboral" action="POST" class="p-2">
-        {% csrf_token %}
-        <div id="errores_list"></div>
-        <div class="modal-body">
-          <div class="row">
-            <div class="col-lg-12">
-              <div class="col-md-4">
-                {% field form_laboral.cargo cols=False label=True %}
-              </div>
-              <div class="col-md-8">
-                {% field form_laboral.institucion cols=False label=True %}
-              </div>
+    <div class="modal-dialog modal-xl2">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title">Nueva Experiencia Laboral</h5>
+                <button type="button" class="btn btn-danger btn-md pull-right" style="margin-top:-30px;"
+                        id="btnCerrarHeaderModallaboral">x
+                </button>
             </div>
-          </div>
-          <div class="row">
-            <div class="col-lg-12">
-              <div class="col-md-3">
-                {% field form_laboral.fecha_inicio cols=False label=True %}
-              </div>
-              <div class="col-md-3">
-                {% field form_laboral.fecha_fin cols=False label=True %}
-              </div>
-              <div class="col-md-4" style="margin-top:30px;cursor:pointer;">
-                {% field form_laboral.trabaja_actualmente cols=False label=True %}
-              </div>
-            </div>
-          </div>
-          <div class="row">
-            <div class="col-lg-12">
-              <div class="col-md-8">
-                {% field form_laboral.descripcion_cargo cols=False label=True %}
-              </div>
-            </div>
-          </div>
+            <form id="formLaboral" action="POST" class="p-2">
+                {% csrf_token %}
+                <div id="errores_list"></div>
+                <div class="modal-body">
+                    <div class="row">
+                        <div class="col-lg-12">
+                            <div class="col-md-4">
+                                {% field form_laboral.cargo cols=False label=True %}
+                            </div>
+                            <div class="col-md-8">
+                                {% field form_laboral.institucion cols=False label=True %}
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-lg-12">
+                            <div class="col-md-3">
+                                {% field form_laboral.fecha_inicio cols=False label=True %}
+                            </div>
+                            <div class="col-md-3">
+                                {% field form_laboral.fecha_fin cols=False label=True %}
+                            </div>
+                            <div class="col-md-4" style="margin-top:30px;cursor:pointer;">
+                                {% field form_laboral.trabaja_actualmente cols=False label=True %}
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-lg-12">
+                            <div class="col-md-8">
+                                {% field form_laboral.descripcion_cargo cols=False label=True %}
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="modal-footer">
+                    <a class="btn btn-primary m-b-sm add-item-laboral" data-added="0">Agregar</a>
+                    <button type="button" data-dismiss="modal" class="btn btn-danger" id="btnCerrarModallaboral">
+                        Cerrar
+                    </button>
+                </div>
+            </form>
         </div>
-        <div class="modal-footer">
-          <a class="btn btn-primary m-b-sm add-item-laboral" data-added="0">Agregar</a>
-          <button type="button" data-dismiss="modal" class="btn btn-danger" id="btnCerrarModallaboral">Cerrar</button>
-        </div>
-      </form>
     </div>
-  </div>
 </div>
