--- a/apps/templates/base_partials/_nav.html
+++ b/apps/templates/base_partials/_nav.html
@@ -1,133 +1,134 @@
 {% load static %}
 <div class="nav-side-menu scrollbar style-2 no-print" id="sidebar-wrapper">
-  <div class="menu-list heightList">
-    <ul id="menu-content" class="menu-content collapse in">
-      <br>
-    {% if username == 'admin' %}
-      <li>
-        <a href="/crear-persona">
-          <div class="col-lg-3 col-md-3 col-xs-3">
-          <i class="fa fa-users"></i>
-          </div>
-          <div class="col-lg-7 col-md-7 col-xs-7">
-            <p data-toggle="tooltip" title="Gestionar persona" data-placement="bottom"
-               class="modulo ocultar ellipsis blue-tooltip" style="margin-top: 0.7rem; font-size:13px;">
-              Gestionar Personas
-            <p>
-          </div>
-        </a>
-      </li>
-    {% else %}
-     <li>
-        <a href="/editar-persona/{{ identificador_persona }}">
-          <div class="col-lg-3 col-md-3 col-xs-3">
-          <i class="fa fa-file"></i>
-          </div>
-          <div class="col-lg-7 col-md-7 col-xs-7">
-            <p data-toggle="tooltip" title="Mi información" data-placement="bottom"
-               class="modulo ocultar ellipsis blue-tooltip" style="margin-top: 0.7rem; font-size:13px;">
-              Mi información
-            <p>
-          </div>
-        </a>
-      </li>
-     <li>
-        <a href="/experiencia/experiencia-laboral/{{ identificador_persona }}">
-          <div class="col-lg-3 col-md-3 col-xs-3">
-          <i class="fa fa-briefcase"></i>
-          </div>
-          <div class="col-lg-7 col-md-7 col-xs-7">
-            <p data-toggle="tooltip" title="Experiancia laboral" data-placement="bottom"
-               class="modulo ocultar ellipsis blue-tooltip" style="margin-top: 0.7rem; font-size:13px;">
-              Experiancia laboral
-            <p>
-          </div>
-        </a>
-      </li>
-     <li>
-        <a href="/formacion/formacion-academica/{{ identificador_persona }}">
-          <div class="col-lg-3 col-md-3 col-xs-3">
-          <i class="fa fa-graduation-cap"></i>
-          </div>
-          <div class="col-lg-7 col-md-7 col-xs-7">
-            <p data-toggle="tooltip" title="Formación académica" data-placement="bottom"
-               class="modulo ocultar ellipsis blue-tooltip" style="margin-top: 0.7rem; font-size:13px;">
-              Formación académica
-            <p>
-          </div>
-        </a>
-      </li>
-     <li>
-        <a href="/idioma/crear/{{ identificador_persona }}">
-          <div class="col-lg-3 col-md-3 col-xs-3">
-          <i class="fa fa-flag"></i>
-          </div>
-          <div class="col-lg-7 col-md-7 col-xs-7">
-            <p data-toggle="tooltip" title="Idioma" data-placement="bottom"
-               class="modulo ocultar ellipsis blue-tooltip" style="margin-top: 0.7rem; font-size:13px;">
-              Idioma
-            <p>
-          </div>
-        </a>
-      </li>
-     <li>
-        <a href="/produccion/cientifica/{{ identificador_persona }}">
-          <div class="col-lg-3 col-md-3 col-xs-3">
-          <i class="fa fa-search"></i>
-          </div>
-          <div class="col-lg-7 col-md-7 col-xs-7">
-            <p data-toggle="tooltip" title="Producción científica" data-placement="bottom"
-               class="modulo ocultar ellipsis blue-tooltip" style="margin-top: 0.7rem; font-size:13px;">
-              Producción científica
-            <p>
-          </div>
-        </a>
-      </li>
-     <li>
-        <a href="/distincion/distincion-premio/{{ identificador_persona }}">
-          <div class="col-lg-3 col-md-3 col-xs-3">
-          <i class="fa fa-trophy"></i>
-          </div>
-          <div class="col-lg-7 col-md-7 col-xs-7">
-            <p data-toggle="tooltip" title="Distinción y premio" data-placement="bottom"
-               class="modulo ocultar ellipsis blue-tooltip" style="margin-top: 0.7rem; font-size:13px;">
-              Distinción y premio
-            <p>
-          </div>
-        </a>
-      </li>
-        {% if tipo_persona == 'docente' %}
-     <li>
-        <a href="/cursos/agregar-cursos/{{ identificador_persona }}">
-          <div class="col-lg-3 col-md-3 col-xs-3">
-          <i class="fa fa-book"></i>
-          </div>
-          <div class="col-lg-7 col-md-7 col-xs-7">
-            <p data-toggle="tooltip" title="Cursos dictados" data-placement="bottom"
-               class="modulo ocultar ellipsis blue-tooltip" style="margin-top: 0.7rem; font-size:13px;">
-              Cursos dictados
-            <p>
-          </div>
-        </a>
-      </li>
-        {% endif %}
-     <li>
-        <a href="/exportar-cv/{{ identificador_persona }}">
-          <div class="col-lg-3 col-md-3 col-xs-3">
-          <i class="fa fa-file-text"></i>
-          </div>
-          <div class="col-lg-7 col-md-7 col-xs-7">
-            <p data-toggle="tooltip" title="Curriculum Vitae" data-placement="bottom"
-               class="modulo ocultar ellipsis blue-tooltip" style="margin-top: 0.7rem; font-size:13px;">
-              Curriculum Vitae
-            <p>
-          </div>
-        </a>
-      </li>
-    {% endif %}
-      <ul class="sub-menu modulo-selected collapse" id="moduloSelected" aria-expanded="true">
-        {% block navmenu %}{% endblock %}
-      </ul>
-    </ul>
-  </div>
+    <div class="menu-list heightList">
+        <ul id="menu-content" class="menu-content collapse in">
+            <br>
+            {% if username == 'admin' %}
+                <li>
+                    <a href="/crear-persona">
+                        <div class="col-lg-3 col-md-3 col-xs-3">
+                            <i class="fa fa-users"></i>
+                        </div>
+                        <div class="col-lg-7 col-md-7 col-xs-7">
+                            <p data-toggle="tooltip" title="Gestionar persona" data-placement="bottom"
+                               class="modulo ocultar ellipsis blue-tooltip" style="margin-top: 0.7rem; font-size:13px;">
+                                Gestionar Personas
+                            <p>
+                        </div>
+                    </a>
+                </li>
+            {% else %}
+                <li>
+                    <a href="/editar-persona/{{ identificador_persona }}">
+                        <div class="col-lg-3 col-md-3 col-xs-3">
+                            <i class="fa fa-file"></i>
+                        </div>
+                        <div class="col-lg-7 col-md-7 col-xs-7">
+                            <p data-toggle="tooltip" title="Mi información" data-placement="bottom"
+                               class="modulo ocultar ellipsis blue-tooltip" style="margin-top: 0.7rem; font-size:13px;">
+                                Mi información
+                            <p>
+                        </div>
+                    </a>
+                </li>
+                <li>
+                    <a href="/experiencia/experiencia-laboral/{{ identificador_persona }}">
+                        <div class="col-lg-3 col-md-3 col-xs-3">
+                            <i class="fa fa-briefcase"></i>
+                        </div>
+                        <div class="col-lg-7 col-md-7 col-xs-7">
+                            <p data-toggle="tooltip" title="Experiancia laboral" data-placement="bottom"
+                               class="modulo ocultar ellipsis blue-tooltip" style="margin-top: 0.7rem; font-size:13px;">
+                                Experiancia laboral
+                            <p>
+                        </div>
+                    </a>
+                </li>
+                <li>
+                    <a href="/formacion/formacion-academica/{{ identificador_persona }}">
+                        <div class="col-lg-3 col-md-3 col-xs-3">
+                            <i class="fa fa-graduation-cap"></i>
+                        </div>
+                        <div class="col-lg-7 col-md-7 col-xs-7">
+                            <p data-toggle="tooltip" title="Formación académica" data-placement="bottom"
+                               class="modulo ocultar ellipsis blue-tooltip" style="margin-top: 0.7rem; font-size:13px;">
+                                Formación académica
+                            <p>
+                        </div>
+                    </a>
+                </li>
+                <li>
+                    <a href="/idioma/crear/{{ identificador_persona }}">
+                        <div class="col-lg-3 col-md-3 col-xs-3">
+                            <i class="fa fa-flag"></i>
+                        </div>
+                        <div class="col-lg-7 col-md-7 col-xs-7">
+                            <p data-toggle="tooltip" title="Idioma" data-placement="bottom"
+                               class="modulo ocultar ellipsis blue-tooltip" style="margin-top: 0.7rem; font-size:13px;">
+                                Idioma
+                            <p>
+                        </div>
+                    </a>
+                </li>
+                <li>
+                    <a href="/produccion/cientifica/{{ identificador_persona }}">
+                        <div class="col-lg-3 col-md-3 col-xs-3">
+                            <i class="fa fa-search"></i>
+                        </div>
+                        <div class="col-lg-7 col-md-7 col-xs-7">
+                            <p data-toggle="tooltip" title="Producción científica" data-placement="bottom"
+                               class="modulo ocultar ellipsis blue-tooltip" style="margin-top: 0.7rem; font-size:13px;">
+                                Producción científica
+                            <p>
+                        </div>
+                    </a>
+                </li>
+                <li>
+                    <a href="/distincion/distincion-premio/{{ identificador_persona }}">
+                        <div class="col-lg-3 col-md-3 col-xs-3">
+                            <i class="fa fa-trophy"></i>
+                        </div>
+                        <div class="col-lg-7 col-md-7 col-xs-7">
+                            <p data-toggle="tooltip" title="Distinción y premio" data-placement="bottom"
+                               class="modulo ocultar ellipsis blue-tooltip" style="margin-top: 0.7rem; font-size:13px;">
+                                Distinción y premio
+                            <p>
+                        </div>
+                    </a>
+                </li>
+                {% if tipo_persona == 'docente' %}
+                    <li>
+                        <a href="/cursos/agregar-cursos/{{ identificador_persona }}">
+                            <div class="col-lg-3 col-md-3 col-xs-3">
+                                <i class="fa fa-book"></i>
+                            </div>
+                            <div class="col-lg-7 col-md-7 col-xs-7">
+                                <p data-toggle="tooltip" title="Cursos dictados" data-placement="bottom"
+                                   class="modulo ocultar ellipsis blue-tooltip"
+                                   style="margin-top: 0.7rem; font-size:13px;">
+                                    Cursos dictados
+                                <p>
+                            </div>
+                        </a>
+                    </li>
+                {% endif %}
+                <li>
+                    <a href="/exportar-cv/{{ identificador_persona }}">
+                        <div class="col-lg-3 col-md-3 col-xs-3">
+                            <i class="fa fa-file-text"></i>
+                        </div>
+                        <div class="col-lg-7 col-md-7 col-xs-7">
+                            <p data-toggle="tooltip" title="Curriculum Vitae" data-placement="bottom"
+                               class="modulo ocultar ellipsis blue-tooltip" style="margin-top: 0.7rem; font-size:13px;">
+                                Curriculum Vitae
+                            <p>
+                        </div>
+                    </a>
+                </li>
+            {% endif %}
+            <ul class="sub-menu modulo-selected collapse" id="moduloSelected" aria-expanded="true">
+                {% block navmenu %}{% endblock %}
+            </ul>
+        </ul>
+    </div>
 </div>
