--- a/apps/templates/capacitacion/crear_acta_asistencia.html
+++ b/apps/templates/capacitacion/crear_acta_asistencia.html
@@ -2,106 +2,110 @@
 {% load static %}
 {% load form_tags %}
 {% block css %}
-  <link rel="stylesheet" href="{% static 'vendor/jquery/css/jquery-ui.min.css' %}">
+    <link rel="stylesheet" href="{% static 'vendor/jquery/css/jquery-ui.min.css' %}">
 {% endblock %}
 {% block container %}
-<div class="col-12">
-  <div class="panel panel-primary">
-    <div class="panel-heading">
-      <h5>Acta de asistencia
-        <label class="pull-right">
-          User: <label class="text-success">{{username}}-{{tipo_persona_desc}}</label>
-          {% if tipo_persona == 'consejo_facultad' %}
-            Facultad: <label class="text-success">{{facultad}}</label>
-          {% endif %}
-        </label>
-      </h5>
-    </div>
-    <div class="panel-body">
-      <div class="row">
-        <div class="col-lg-12">
-          {% if form.errors %}
-          {% for error in form.non_field_errors %}
-          <div class="alert alert-danger">
-            <strong>{{ error|escape }}</strong>
-          </div>
-          {% endfor %}
-          {% endif %}
-        </div>
-      </div>
-      <form method="POST" enctype="multipart/form-data">
-        {% csrf_token %}
-        <fieldset class="border p-2">
-          <legend class="scheduler-border" style="width: 150px!important; font-size:12px;"> Generar acta de asistencia</legend>
-          <div class="col-lg-12">
-            <div class="col-lg-8">
-              <label class="txt-label">Asistencia Registrada en Excel:<label class="text-danger">*</label></label>
-              {% field form.excel_asistencia cols=False label=False %}
+    <div class="col-12">
+        <div class="panel panel-primary">
+            <div class="panel-heading">
+                <h5>Acta de asistencia
+                    <label class="pull-right">
+                        User: <label class="text-success">{{ username }}-{{ tipo_persona_desc }}</label>
+                        {% if tipo_persona == 'consejo_facultad' %}
+                            Facultad: <label class="text-success">{{ facultad }}</label>
+                        {% endif %}
+                    </label>
+                </h5>
             </div>
-          </div>
-          <div class="col-lg-12">
-            <div class="col-lg-4">
-              <label class="txt-label">Acta de asistencia en PDF con firmas:</label>
-              {% field form.ruta_acta_pdf cols=False label=False %}
-            </div>
-            <div class="col-md-6">
-              <label class="txt-label">Observación:</label>
-              {% field form.observacion cols=False label=False %}
-            </div>
-            <div class="col-lg-1">
-              <label>&nbsp;&nbsp;</label>
-              <button class="btn btn-success" id="btn-generar-acta" type="submit">Cargar acta</button>
-            </div>
-          </div>
-        </fieldset>
-        <fieldset class="border p-2">
-          <legend class="scheduler-border" style="width: 60px!important; font-size:12px;"> Firmantes</legend>
-          <div class="col-lg-12">
-            <div class="col-lg-3">
+            <div class="panel-body">
+                <div class="row">
+                    <div class="col-lg-12">
+                        {% if form.errors %}
+                            {% for error in form.non_field_errors %}
+                                <div class="alert alert-danger">
+                                    <strong>{{ error|escape }}</strong>
+                                </div>
+                            {% endfor %}
+                        {% endif %}
+                    </div>
+                </div>
+                <form method="POST" enctype="multipart/form-data">
+                    {% csrf_token %}
+                    <fieldset class="border p-2">
+                        <legend class="scheduler-border" style="width: 150px!important; font-size:12px;"> Generar acta
+                            de asistencia
+                        </legend>
+                        <div class="col-lg-12">
+                            <div class="col-lg-8">
+                                <label class="txt-label">Asistencia Registrada en Excel:<label
+                                        class="text-danger">*</label></label>
+                                {% field form.excel_asistencia cols=False label=False %}
+                            </div>
+                        </div>
+                        <div class="col-lg-12">
+                            <div class="col-lg-4">
+                                <label class="txt-label">Acta de asistencia en PDF con firmas:</label>
+                                {% field form.ruta_acta_pdf cols=False label=False %}
+                            </div>
+                            <div class="col-md-6">
+                                <label class="txt-label">Observación:</label>
+                                {% field form.observacion cols=False label=False %}
+                            </div>
+                            <div class="col-lg-1">
+                                <label>&nbsp;&nbsp;</label>
+                                <button class="btn btn-success" id="btn-generar-acta" type="submit">Cargar acta</button>
+                            </div>
+                        </div>
+                    </fieldset>
+                    <fieldset class="border p-2">
+                        <legend class="scheduler-border" style="width: 60px!important; font-size:12px;"> Firmantes
+                        </legend>
+                        <div class="col-lg-12">
+                            <div class="col-lg-3">
 
-            </div>
-            <div class="col-lg-7">
+                            </div>
+                            <div class="col-lg-7">
 
+                            </div>
+                        </div>
+                    </fieldset>
+                    <br>
+                    <div class="col-lg-12">
+                        <div class="row">
+                            <div class="col-lg-8"></div>
+                            <div class="col-lg-4" align="right">
+                                <a href="/capacitacion" class="btn btn-danger btn-sm">Cancel</a>
+                            </div>
+                        </div>
+                    </div>
+                </form>
             </div>
-          </div>
-        </fieldset>
-        <br>
-        <div class="col-lg-12">
-          <div class="row">
-            <div class="col-lg-8"></div>
-            <div class="col-lg-4" align="right">
-              <a href="/capacitacion" class="btn btn-danger btn-sm">Cancel</a>
-            </div>
-          </div>
         </div>
-      </form>
     </div>
-  </div>
-</div>
-<div class="modal" tabindex="-1" id="modal-proyecto-pdf">
-  <div class="modal-dialog modal-xl2">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title">Documento de proyecto de capacitación</h5>
-        <button type="button" class="close" aria-label="Close" data-dismiss="modal">
-          <span aria-hidden="true">&times;</span>
-        </button>
-      </div>
-      <div class="modal-body">
-        <iframe style="width:100%;" height="800px" src="" id="iframe-proyecto-pdf">
-        </iframe>
-      </div>
+    <div class="modal" tabindex="-1" id="modal-proyecto-pdf">
+        <div class="modal-dialog modal-xl2">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title">Documento de proyecto de capacitación</h5>
+                    <button type="button" class="close" aria-label="Close" data-dismiss="modal">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <iframe style="width:100%;" height="800px" src="" id="iframe-proyecto-pdf">
+                    </iframe>
+                </div>
+            </div>
+        </div>
     </div>
-  </div>
-</div>
 {% endblock %}
 {% block javascript %}
-  <script>
-    var buscarPersonaUrl = "{% url 'persona:buscar-persona' %}";
-    var urlListarCapacitacion = "{% url 'capacitacion:listar_capacitacion' %}";
-    datatablesES = "{% static 'vendor/datatables/language/spanish.json' %}";
-    var urlProyectoDescargaPdf = "{% url 'capacitacion:proyecto_descarga_pdf' 'archivo' %}";
-    var eliminarCapacitacion = "{% url 'capacitacion:eliminar-capacitacion' 'id' %}";
-  </script>
-  <script src="{% static 'js/capacitacion/asistencia.js' %}"></script>
+    <script>
+        var buscarPersonaUrl = "{% url 'persona:buscar-persona' %}";
+        var urlListarCapacitacion = "{% url 'capacitacion:listar_capacitacion' %}";
+        datatablesES = "{% static 'vendor/datatables/language/spanish.json' %}";
+        var urlProyectoDescargaPdf = "{% url 'capacitacion:proyecto_descarga_pdf' 'archivo' %}";
+        var eliminarCapacitacion = "{% url 'capacitacion:eliminar-capacitacion' 'id' %}";
+    </script>
+    <script src="{% static 'js/capacitacion/asistencia.js' %}"></script>
 {% endblock %}
