--- a/apps/templates/distincion/partials/_modal_distincion.html
+++ b/apps/templates/distincion/partials/_modal_distincion.html
@@ -1,58 +1,59 @@
 {% load form_tags %}
 <div class="modal fade" id="modal-distincion">
-  <div class="modal-dialog modal-xl2">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title">Nueva Distinción o premio</h5>
-        <button type="button" class="btn btn-danger btn-md pull-right" style="margin-top:-30px;"
-                id="btnCerrarHeaderModalDistincion">x
-        </button>
-      </div>
-      <form id="formDistincion" action="POST" class="p-2">
-        {% csrf_token %}
-        <div id="errores_list"></div>
-        <div class="modal-body">
-          <div class="row">
-            <div class="col-lg-12">
-              <div class="col-md-12">
-                {% field form_distincion.institucion cols=False label=True %}
-              </div>
+    <div class="modal-dialog modal-xl2">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title">Nueva Distinción o premio</h5>
+                <button type="button" class="btn btn-danger btn-md pull-right" style="margin-top:-30px;"
+                        id="btnCerrarHeaderModalDistincion">x
+                </button>
             </div>
-          </div>
-          <div class="row">
-            <div class="col-lg-12">
-              <div class="col-md-12">
-                {% field form_distincion.distincion cols=False label=True %}
-              </div>
-            </div>
-          </div>
-          <div class="row">
-            <div class="col-lg-12">
-              <div class="col-md-12">
-                {% field form_distincion.descripcion cols=False label=True %}
-              </div>
-            </div>
-          </div>
-          <div class="row">
-            <div class="col-lg-12">
-              <div class="col-md-4">
-                {% field form_distincion.pais cols=False label=True %}
-              </div>
-              <div class="col-md-6">
-                {% field form_distincion.web_referencia cols=False label=True %}
-              </div>
-              <div class="col-md-2">
-                {% field form_distincion.fecha cols=False label=True %}
-              </div>
-            </div>
-          </div>
-          <div class="modal-footer">
-            <a class="btn btn-primary m-b-sm add-item-distincion" data-added="0">Agregar</a>
-            <button type="button" data-dismiss="modal" class="btn btn-danger" id="btnCerrarModalDistincion">Cerrar
-            </button>
-          </div>
+            <form id="formDistincion" action="POST" class="p-2">
+                {% csrf_token %}
+                <div id="errores_list"></div>
+                <div class="modal-body">
+                    <div class="row">
+                        <div class="col-lg-12">
+                            <div class="col-md-12">
+                                {% field form_distincion.institucion cols=False label=True %}
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-lg-12">
+                            <div class="col-md-12">
+                                {% field form_distincion.distincion cols=False label=True %}
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-lg-12">
+                            <div class="col-md-12">
+                                {% field form_distincion.descripcion cols=False label=True %}
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-lg-12">
+                            <div class="col-md-4">
+                                {% field form_distincion.pais cols=False label=True %}
+                            </div>
+                            <div class="col-md-6">
+                                {% field form_distincion.web_referencia cols=False label=True %}
+                            </div>
+                            <div class="col-md-2">
+                                {% field form_distincion.fecha cols=False label=True %}
+                            </div>
+                        </div>
+                    </div>
+                    <div class="modal-footer">
+                        <a class="btn btn-primary m-b-sm add-item-distincion" data-added="0">Agregar</a>
+                        <button type="button" data-dismiss="modal" class="btn btn-danger" id="btnCerrarModalDistincion">
+                            Cerrar
+                        </button>
+                    </div>
+                </div>
+            </form>
         </div>
-      </form>
     </div>
-  </div>
 </div>
