--- a/apps/templates/experiencia/partials/_modal_evaluador_proyecto.html
+++ b/apps/templates/experiencia/partials/_modal_evaluador_proyecto.html
@@ -1,66 +1,68 @@
 {% load form_tags %}
 <div class="modal fade" id="modal-evaluador">
-  <div class="modal-dialog modal-xl2">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title">Nueva Experiencia Como Evaluador y/o formulador de proyectos</h5>
-        <button type="button" class="btn btn-danger btn-md pull-right" style="margin-top:-30px;"
-                id="btnCerrarHeaderModalEvaluador">x
-        </button>
-      </div>
-      <form id="formEvaluador" action="POST" class="p-2">
-        {% csrf_token %}
-        <div id="errores_list_evaluador"></div>
-        <div class="modal-body">
-          <div class="row">
-            <div class="col-lg-12">
-              <div class="col-md-6">
-                {% field form_evaluador.experiencia cols=False label=True %}
-              </div>
-              <div class="col-md-3">
-                {% field form_evaluador.anio cols=False label=True %}
-              </div>
-              <div class="col-md-3">
-                {% field form_evaluador.pais cols=False label=True %}
-              </div>
+    <div class="modal-dialog modal-xl2">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title">Nueva Experiencia Como Evaluador y/o formulador de proyectos</h5>
+                <button type="button" class="btn btn-danger btn-md pull-right" style="margin-top:-30px;"
+                        id="btnCerrarHeaderModalEvaluador">x
+                </button>
             </div>
-          </div>
-          <div class="row">
-            <div class="col-lg-12">
-              <div class="col-md-4">
-                {% field form_evaluador.tipo_proyecto_formulado cols=False label=True %}
-              </div>
-              <div class="col-md-3 met_evaluacion">
-                {% field form_evaluador.metodologia_evaluacion cols=False label=True %}
-              </div>
-              <div class="col-md-5">
-                {% field form_evaluador.entidad_financiadora cols=False label=True %}
-              </div>
-            </div>
-          </div>
-          <div class="row">
-            <div class="col-lg-12">
-              <div class="col-md-10">
-                {% field form_evaluador.nombre_concurso cols=False label=True %}
-              </div>
-            </div>
-          </div>
-          <div class="row">
-            <div class="col-lg-12">
-              <div class="col-md-7">
-                {% field form_evaluador.url_concurso cols=False label=True %}
-              </div>
-              <div class="col-md-5">
-                {% field form_evaluador.presupuesto_proyecto cols=False label=True %}
-              </div>
-            </div>
-          </div>
+            <form id="formEvaluador" action="POST" class="p-2">
+                {% csrf_token %}
+                <div id="errores_list_evaluador"></div>
+                <div class="modal-body">
+                    <div class="row">
+                        <div class="col-lg-12">
+                            <div class="col-md-6">
+                                {% field form_evaluador.experiencia cols=False label=True %}
+                            </div>
+                            <div class="col-md-3">
+                                {% field form_evaluador.anio cols=False label=True %}
+                            </div>
+                            <div class="col-md-3">
+                                {% field form_evaluador.pais cols=False label=True %}
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-lg-12">
+                            <div class="col-md-4">
+                                {% field form_evaluador.tipo_proyecto_formulado cols=False label=True %}
+                            </div>
+                            <div class="col-md-3 met_evaluacion">
+                                {% field form_evaluador.metodologia_evaluacion cols=False label=True %}
+                            </div>
+                            <div class="col-md-5">
+                                {% field form_evaluador.entidad_financiadora cols=False label=True %}
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-lg-12">
+                            <div class="col-md-10">
+                                {% field form_evaluador.nombre_concurso cols=False label=True %}
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-lg-12">
+                            <div class="col-md-7">
+                                {% field form_evaluador.url_concurso cols=False label=True %}
+                            </div>
+                            <div class="col-md-5">
+                                {% field form_evaluador.presupuesto_proyecto cols=False label=True %}
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="modal-footer">
+                    <a class="btn btn-primary m-b-sm add-item-evaluador" data-added="0">Agregar</a>
+                    <button type="button" data-dismiss="modal" class="btn btn-danger" id="btnCerrarModalEvaluador">
+                        Cerrar
+                    </button>
+                </div>
+            </form>
         </div>
-        <div class="modal-footer">
-          <a class="btn btn-primary m-b-sm add-item-evaluador" data-added="0">Agregar</a>
-          <button type="button" data-dismiss="modal" class="btn btn-danger" id="btnCerrarModalEvaluador">Cerrar</button>
-        </div>
-      </form>
     </div>
-  </div>
 </div>
