--- a/apps/templates/idioma/crear.html
+++ b/apps/templates/idioma/crear.html
@@ -2,98 +2,100 @@
 {% load static %}
 {% load form_tags %}
 {% block css %}
-<link rel="stylesheet" href="{% static 'vendor/jquery/css/jquery-ui.min.css' %}">
+    <link rel="stylesheet" href="{% static 'vendor/jquery/css/jquery-ui.min.css' %}">
 {% endblock %}
 {% block container %}
-<div class="col-12">
-  <div class="panel panel-primary">
-    <div class="panel-heading">
-      <h5>{% if object %} Editar {% else %} Registrar {%endif%} Idioma
-        <label class="pull-right">
-          User: <label class="text-success">{{username}} {{tipo_persona_desc}}</label>
-        </label>
-      </h5>
-    </div>
-    <div class="panel-body">
-      <div class="row">
-        <div class="col-lg-12">
-          {% if form.errors %}
-          {% for error in form.non_field_errors %}
-          <div class="alert alert-danger">
-            <strong>{{ error|escape }}</strong>
-          </div>
-          {% endfor %}
-          {% endif %}
-        </div>
-      </div>
-      <form method="POST" enctype="multipart/form-data">
-        {% csrf_token %}
-        <div class="col-lg-12">
-          <div class="row">
-            <div class="col-lg-8"></div>
-            <div class="col-lg-4" align="right">
-              <a href="{% url 'idioma:crear_idioma' persona_id %}" class="btn btn-danger btn-sm">Cancelar</a>
-              &nbsp;
-              <button type="submit" class="btn btn-primary btn-sm" id="btn-guardar">Guardar</button>
+    <div class="col-12">
+        <div class="panel panel-primary">
+            <div class="panel-heading">
+                <h5>{% if object %} Editar {% else %} Registrar {% endif %} Idioma
+                    <label class="pull-right">
+                        User: <label class="text-success">{{ username }} {{ tipo_persona_desc }}</label>
+                    </label>
+                </h5>
             </div>
-          </div>
-        </div>
-        <fieldset class="border p-2">
-          <legend class="scheduler-border" style="width: 110px!important; font-size:12px;"> Datos de la Persona</legend>
-          <div class="col-lg-12">
-            <div class="col-md-4">
-              {% field form.idioma cols=False label=True %}
-            </div>
-            <div class="col-md-4">
-              {% field form.lectura cols=False label=True %}
-            </div>
-            <div class="col-md-4">
-              {% field form.conversacion cols=False label=True label_width=3 %}
-            </div>
-          </div>
-          <div class="col-lg-12">
-            <div class="col-md-4">
-              {% field form.escritura cols=False label=True %}
-            </div>
-            <div class="col-md-4">
-              {% field form.forma_aprendizaje cols=False label=True %}
-            </div>
-            <div class="col-md-4">
-                <div style="margin-top: 35px">
-                  {% field form.es_lengua_materna cols=False label=True label_width=3 %}
+            <div class="panel-body">
+                <div class="row">
+                    <div class="col-lg-12">
+                        {% if form.errors %}
+                            {% for error in form.non_field_errors %}
+                                <div class="alert alert-danger">
+                                    <strong>{{ error|escape }}</strong>
+                                </div>
+                            {% endfor %}
+                        {% endif %}
+                    </div>
+                </div>
+                <form method="POST" enctype="multipart/form-data">
+                    {% csrf_token %}
+                    <div class="col-lg-12">
+                        <div class="row">
+                            <div class="col-lg-8"></div>
+                            <div class="col-lg-4" align="right">
+                                <a href="{% url 'idioma:crear_idioma' persona_id %}" class="btn btn-danger btn-sm">Cancelar</a>
+                                &nbsp;
+                                <button type="submit" class="btn btn-primary btn-sm" id="btn-guardar">Guardar</button>
+                            </div>
+                        </div>
+                    </div>
+                    <fieldset class="border p-2">
+                        <legend class="scheduler-border" style="width: 110px!important; font-size:12px;"> Datos de la
+                            Persona
+                        </legend>
+                        <div class="col-lg-12">
+                            <div class="col-md-4">
+                                {% field form.idioma cols=False label=True %}
+                            </div>
+                            <div class="col-md-4">
+                                {% field form.lectura cols=False label=True %}
+                            </div>
+                            <div class="col-md-4">
+                                {% field form.conversacion cols=False label=True label_width=3 %}
+                            </div>
+                        </div>
+                        <div class="col-lg-12">
+                            <div class="col-md-4">
+                                {% field form.escritura cols=False label=True %}
+                            </div>
+                            <div class="col-md-4">
+                                {% field form.forma_aprendizaje cols=False label=True %}
+                            </div>
+                            <div class="col-md-4">
+                                <div style="margin-top: 35px">
+                                    {% field form.es_lengua_materna cols=False label=True label_width=3 %}
+                                </div>
+                            </div>
+                        </div>
+                    </fieldset>
+                </form>
+                &nbsp;
+                <div class="tab-content table-responsive">
+                    <table class="table table-bordered table-hover table-striped table-responsive"
+                           id="lista-idiomas" style="width: 100%;">
+                        <thead>
+                        <tr>
+                            <th></th>
+                            <th>Idioma</th>
+                            <th>Lectura</th>
+                            <th>Conversación</th>
+                            <th>Escritura</th>
+                            <th>Forma de aprendizaje</th>
+                            <th>lengua materna</th>
+                            <th></th>
+                            <th></th>
+                        </tr>
+                        </thead>
+                    </table>
                 </div>
             </div>
-          </div>
-        </fieldset>
-      </form>
-      &nbsp;
-      <div class="tab-content table-responsive">
-        <table class="table table-bordered table-hover table-striped table-responsive"
-               id="lista-idiomas" style="width: 100%;">
-          <thead>
-          <tr>
-            <th></th>
-            <th>Idioma</th>
-            <th>Lectura</th>
-            <th>Conversación</th>
-            <th>Escritura</th>
-            <th>Forma de aprendizaje</th>
-            <th>lengua materna</th>
-            <th></th>
-            <th></th>
-          </tr>
-          </thead>
-        </table>
-      </div>
+        </div>
     </div>
-  </div>
-</div>
 {% endblock %}
 {% block javascript %}
-<script>
-    var urlListarIdiomas = "{% url 'idioma:listar_idiomas' persona_id %}";
-    var urlEliminarIdioma = "{% url 'idioma:eliminar_idioma' 'pk' %}";
-    datatablesES = "{% static 'vendor/datatables/language/spanish.json' %}";
-</script>
-<script src="{% static 'js/idioma/idioma.js' %}"></script>
+    <script>
+        var urlListarIdiomas = "{% url 'idioma:listar_idiomas' persona_id %}";
+        var urlEliminarIdioma = "{% url 'idioma:eliminar_idioma' 'pk' %}";
+        datatablesES = "{% static 'vendor/datatables/language/spanish.json' %}";
+    </script>
+    <script src="{% static 'js/idioma/idioma.js' %}"></script>
 {% endblock %}
